--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 /* Add your custom styles here */
 
+
+
 body {
   font-family: 'Arial', sans-serif;
+  
 }
 
 /* Navbar Styles */
@@ -77,4 +80,55 @@ footer {
   bottom: 0;
   width: 100%;
 }
+#hero{
+ color:whitesmoke;
 
+}
+
+#about{
+ color:whitesmoke;
+
+}
+
+#education{
+ color:whitesmoke;
+
+}
+#projects{
+ color:whitesmoke;
+
+}
+#interests{
+ color:whitesmoke;
+
+}
+#contact{
+ color:whitesmoke;
+
+}
+#footer{
+ color:whitesmoke;
+
+}
+#navbar{
+ color:whitesmoke;
+
+}
+
+#particles-js {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  /*background-image: url('');*/
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  
+  
+  
+}
+
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
