--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 #hero img {
   width: 200px; /* Adjust width as needed */
-  height: 200px; /* Adjust height as needed */
+  height: 250px; /* Adjust height as needed */
   z-index: 2;
 }
 
@@ -26,16 +26,6 @@ height: 100%;
 z-index: -1; /* Ensures it is below the hero content */
 pointer-events: none; /* Allows clicking through the canvas */
 }
-
-#particles-js2 {
-  position: absolute; /* Positions particles.js background absolutely */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1; /* Ensures it is below the hero content */
-  pointer-events: none; /* Allows clicking through the canvas */
-  }
 
 /* Ensuring the canvas fills the container */
 .particles-js-canvas-el {
@@ -55,4 +45,15 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+}
+
+/* Black color for carousel navigation buttons */
+.carousel-control-prev, .carousel-control-next {
+  color: #000000; /* Set to black or your desired color */
+}
+
+/* Change the color of the navigation button icons */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  filter: invert(100%); /* Invert the color of the icon */
 }
