--- a/styles.css
+++ b/styles.css
@@ -99,3 +99,10 @@ footer {
   border-color: #007bff; /* Change border color on hover */
 }
 
+.navbar-nav .nav-item.active {
+  border-bottom: 2px solid #007bff; /* Adjust the color as needed */
+}
+
+.navbar-nav .nav-item.clicked a {
+  font-weight: bold;
+}
